src/corelib/itemmodels/qidentityproxymodel.h
@@ -45,10 +45,12 @@ public:
     bool moveColumns(const QModelIndex &sourceParent, int sourceColumn, int count, const QModelIndex &destinationParent, int destinationChild) override;
 
     bool handleSourceLayoutChanges() const;
+    bool handleSourceDataChanges() const;
 
 protected:
     QIdentityProxyModel(QIdentityProxyModelPrivate &dd, QObject* parent);
     void setHandleSourceLayoutChanges(bool);
+    void setHandleSourceDataChanges(bool);
 
 private:
     Q_DECLARE_PRIVATE(QIdentityProxyModel)
