tests/auto/corelib/itemmodels/qidentityproxymodel/tst_qidentityproxymodel.cpp
@@ -37,6 +37,7 @@ class IdentityProxyModel : public QIdentityProxyModel
 public:
     // The name has to be different than the method from the base class
     void setHandleSLC(bool b) { setHandleSourceLayoutChanges(b); }
+    void setHandleSDC(bool b) { setHandleSourceDataChanges(b); }
 };
 
 class tst_QIdentityProxyModel : public QObject
@@ -65,6 +66,7 @@ private slots:
     void createPersistentOnLayoutAboutToBeChanged();
 
     void testSetHandleLayoutChanges();
+    void testSetHandleDataChanges();
 
 protected:
     void verifyIdentity(QAbstractItemModel *model, const QModelIndex &parent = QModelIndex());
@@ -541,11 +543,28 @@ void tst_QIdentityProxyModel::testSetHandleLayoutChanges()
 
     proxy.setSourceModel(nullptr);
 
-    // Disable handling (connecting to layotu signals) of source model layout changes
+    // Disable handling (connecting to layout signals) of source model layout changes
     proxy.setHandleSLC(false);
     proxy.setSourceModel(&model);
     for (const auto &m : layoutSignals)
         QVERIFY(!model.isConnected(m));
+}
+
+void tst_QIdentityProxyModel::testSetHandleDataChanges()
+{
+    const auto signal = QMetaMethod::fromSignal(&QAbstractItemModel::dataChanged);
+
+    DataChangedModel model;
+    IdentityProxyModel proxy;
+    proxy.setSourceModel(&model);
+    QVERIFY(model.isConnected(signal)); // Connected by default
+
+    proxy.setSourceModel(nullptr);
+
+    // Disable handling (connecting to data signals) of source model data changes
+    proxy.setHandleSDC(false);
+    proxy.setSourceModel(&model);
+    QVERIFY(!model.isConnected(signal));
 }
 
 QTEST_MAIN(tst_QIdentityProxyModel)
